Added some template parser files - vector<vector<int>>, etc., get correctly parsed by this guy and a small object model is built up.

--- a/TTreeParser/TTreeParser.csproj
+++ b/TTreeParser/TTreeParser.csproj
@@ -56,6 +56,7 @@
     <Compile Include="ParseTFile.cs" />
     <Compile Include="ParseTTree.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TemplateParser.cs" />
     <Compile Include="TypeDefTranslator.cs" />
     <Compile Include="Utils.cs" />
   </ItemGroup>
