--- a/TTreeParser.Tests/TTreeParser.Tests.csproj
+++ b/TTreeParser.Tests/TTreeParser.Tests.csproj
@@ -72,6 +72,7 @@
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="t_ParseTTree.cs" />
+    <Compile Include="t_TemplateParser.cs" />
     <Compile Include="t_Utils.cs" />
   </ItemGroup>
   <ItemGroup>
