--- a/LINQToTTree/LINQToTTreeLib/LINQToTTreeLib.csproj
+++ b/LINQToTTree/LINQToTTreeLib/LINQToTTreeLib.csproj
@@ -35,7 +35,7 @@
       <HintPath>..\..\ROOT.NET Wrappers\Release\libCoreWrapper.dll</HintPath>
     </Reference>
     <Reference Include="Remotion.Data.Linq">
-      <HintPath>..\RemotionRelinq_1.13.41.0\net-3.5\bin\release\Remotion.Data.Linq.dll</HintPath>
+      <HintPath>..\RemotionRelinq_1.13.41.0\net-3.5\bin\debug\Remotion.Data.Linq.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.Composition" />
