Automate the generation of a cs class file

--- a/DemosAndTests/DemoJetShapes/DemoJetShapes.csproj
+++ b/DemosAndTests/DemoJetShapes/DemoJetShapes.csproj
@@ -46,11 +46,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ntupleDataModel.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="ntuple.ntupom" />
+    <None Include="ntuple.ntupom">
+      <Generator>cmd.exe</Generator>
+    </None>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
