Added proper test to see if we had a root object or not when generating the ntuple Added test too, but had to take it out b/c root just locks the dll into memory and we can't run anymore tests!!! Sigh.

--- a/LINQToTTree/TTreeParserCPP.Tests/TTreeParserCPP.Tests.vcxproj
+++ b/LINQToTTree/TTreeParserCPP.Tests/TTreeParserCPP.Tests.vcxproj
@@ -56,7 +56,7 @@
     </ClCompile>
     <Link>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>libCore.lib;libTree.lib;libPhysics.lib</AdditionalDependencies>
+      <AdditionalDependencies>libCore.lib;libTree.lib;libPhysics.lib;libCint.lib</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -86,8 +86,10 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="cintcode.h" />
     <ClInclude Include="resource.h" />
     <ClInclude Include="CreateTrees.h" />
+    <ClInclude Include="ATestRootClass.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="AssemblyInfo.cpp" />
