--- a/LINQToTTree/TTreeDataModel/TTreeDataModel.csproj
+++ b/LINQToTTree/TTreeDataModel/TTreeDataModel.csproj
@@ -43,6 +43,7 @@
     <Compile Include="IClassItem.cs" />
     <Compile Include="ItemROOTClass.cs" />
     <Compile Include="ItemSimpleType.cs" />
+    <Compile Include="NtupleTreeInfo.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ROOTClassShell.cs" />
     <Compile Include="ItemVector.cs" />
