--- a/LINQToTTree/LinqToTTreeInterfacesLib/LinqToTTreeInterfacesLib.csproj
+++ b/LINQToTTree/LinqToTTreeInterfacesLib/LinqToTTreeInterfacesLib.csproj
@@ -53,6 +53,7 @@
     <Compile Include="ITypeHandler.cs" />
     <Compile Include="IValue.cs" />
     <Compile Include="IVariable.cs" />
+    <Compile Include="IVariableSaver.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
