Refactor the translation. Most of the reason to do this is make it more testable.

--- a/LINQToTTree/LinqToTTreeInterfacesLib/LinqToTTreeInterfacesLib.csproj
+++ b/LINQToTTree/LinqToTTreeInterfacesLib/LinqToTTreeInterfacesLib.csproj
@@ -63,6 +63,7 @@
     <Compile Include="IValue.cs" />
     <Compile Include="IVariable.cs" />
     <Compile Include="IVariableSaver.cs" />
+    <Compile Include="IVariableSaverManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
