--- a/DemosAndTests/DemoJetShapes/DemoJetShapes.csproj
+++ b/DemosAndTests/DemoJetShapes/DemoJetShapes.csproj
@@ -42,7 +42,7 @@
     </Reference>
     <Reference Include="LINQToTTreeLib">
       <HintPath>..\..\LINQToTTree\LINQToTTreeLib\bin\Debug\LINQToTTreeLib.dll</HintPath>
-      <Private>False</Private>
+      <Private>True</Private>
     </Reference>
     <Reference Include="Remotion.Data.Linq, Version=1.13.41.2, Culture=neutral, PublicKeyToken=fee00910d6e5f53b, processorArchitecture=MSIL">
       <HintPath>..\..\LINQToTTree\RemotionRelinq_1.13.41.0\net-3.5\bin\debug\Remotion.Data.Linq.dll</HintPath>
