Moved all template and infrasturcure files to AppData (local). This is the continued fall out from that move, that we missed for one reason or the other.

--- a/DemosAndTests/DemoJetShapes/DemoJetShapes.csproj
+++ b/DemosAndTests/DemoJetShapes/DemoJetShapes.csproj
@@ -77,8 +77,8 @@
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
-    <PostBuildEvent>xcopy /Y "$(SolutionDir)\..\LINQToTTree\LINQToTTreeLib\bin\Debug\InfrastructureSourceFiles" ".\InfrastructureSourceFiles\"
-xcopy /Y "$(SolutionDir)\..\LINQToTTree\LINQToTTreeLib\bin\Debug\Templates" ".\Templates\"</PostBuildEvent>
+    <PostBuildEvent>
+    </PostBuildEvent>
   </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
