--- a/DemosAndTests/NtupleClasses/NtupleClasses.vcxproj
+++ b/DemosAndTests/NtupleClasses/NtupleClasses.vcxproj
@@ -49,9 +49,12 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <NMakePreprocessorDefinitions>WIN32;_DEBUG;$(NMakePreprocessorDefinitions)</NMakePreprocessorDefinitions>
     <NMakeBuildCommandLine>nmake /nologo /F build.mak all</NMakeBuildCommandLine>
+    <NMakeCleanCommandLine>nmake /nologo /F build.mak clean</NMakeCleanCommandLine>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <NMakePreprocessorDefinitions>WIN32;NDEBUG;$(NMakePreprocessorDefinitions)</NMakePreprocessorDefinitions>
+    <NMakeBuildCommandLine>nmake /nologo /F build.mak all</NMakeBuildCommandLine>
+    <NMakeCleanCommandLine>nmake /nologo /F build.mak clean</NMakeCleanCommandLine>
   </PropertyGroup>
   <ItemDefinitionGroup>
   </ItemDefinitionGroup>
