--- a/DemosAndTests/GenerateNtupleXMLSpec/GenerateNtupleXMLSpec.vcxproj
+++ b/DemosAndTests/GenerateNtupleXMLSpec/GenerateNtupleXMLSpec.vcxproj
@@ -37,14 +37,16 @@
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
-    <NMakeBuildCommandLine>nmake /nologo build.mak</NMakeBuildCommandLine>
+    <NMakeBuildCommandLine>nmake /nologo /F build.mak all</NMakeBuildCommandLine>
     <NMakeOutput>GenerateNtupleXMLSpec.exe</NMakeOutput>
     <NMakePreprocessorDefinitions>WIN32;_DEBUG;$(NMakePreprocessorDefinitions)</NMakePreprocessorDefinitions>
+    <NMakeCleanCommandLine>nmake /nologo /F build.mak clean</NMakeCleanCommandLine>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
-    <NMakeBuildCommandLine>nmake /nologo build.mak</NMakeBuildCommandLine>
+    <NMakeBuildCommandLine>nmake /nologo /F build.mak all</NMakeBuildCommandLine>
     <NMakeOutput>GenerateNtupleXMLSpec.exe</NMakeOutput>
     <NMakePreprocessorDefinitions>WIN32;NDEBUG;$(NMakePreprocessorDefinitions)</NMakePreprocessorDefinitions>
+    <NMakeCleanCommandLine>nmake /nologo /F build.mak clean</NMakeCleanCommandLine>
   </PropertyGroup>
   <ItemDefinitionGroup>
   </ItemDefinitionGroup>
