Added some sample histograms to the demo.

--- a/DemosAndTests/DemoJetShapes/DemoJetShapes.csproj
+++ b/DemosAndTests/DemoJetShapes/DemoJetShapes.csproj
@@ -40,8 +40,14 @@
     <Reference Include="libCoreWrapper, Version=0.0.0.0, Culture=neutral, processorArchitecture=x86">
       <HintPath>..\..\..\..\..\..\..\..\root\NETWrappers\lib\libCoreWrapper.dll</HintPath>
     </Reference>
+    <Reference Include="libHistWrapper, Version=0.0.0.0, Culture=neutral, processorArchitecture=x86">
+      <HintPath>..\..\..\..\..\..\..\..\root\NETWrappers\lib\libHistWrapper.dll</HintPath>
+    </Reference>
     <Reference Include="libPhysicsWrapper">
       <HintPath>..\..\..\..\..\..\..\..\root\NETWrappers\lib\libPhysicsWrapper.dll</HintPath>
+    </Reference>
+    <Reference Include="libRIOWrapper, Version=0.0.0.0, Culture=neutral, processorArchitecture=x86">
+      <HintPath>..\..\..\..\..\..\..\..\root\NETWrappers\lib\libRIOWrapper.dll</HintPath>
     </Reference>
     <Reference Include="LINQToTTreeLib">
       <HintPath>..\..\LINQToTTree\LINQToTTreeLib\bin\Debug\LINQToTTreeLib.dll</HintPath>
